--- a/faq.html
+++ b/faq.html
@@ -54,7 +54,7 @@ Type here!
 <br>
 <input type="submit" value="Post">
 </td>
-<td style="text-align:top;">
+<td valign="top">
 Comment Area
 </td>
 <td>
