--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@ Avika Jain
 </h1>
 </td>
 <td rowspan="2">
-<img src="555.JPG" height="20%" width="80%">
+<img src="unnamed.JPG" height="20%" width="80%">
 </td>
 </tr>
 <tr>
