--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ About Me
 <table border="2" width="90%" height="70%" align="center">
 <tr>
 <td>
-<img src="Mypost.PNG" height="20%" width="80%">
+<img src="image.PNG" height="20%" width="80%">
 </td>
 <td>
 <p>
